--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ PORT=3000
 # Gemini AI Filter (optional)
 GEMINI_API_KEY=your_gemini_api_key_here
 FILTER_BATCH_SIZE=50
-FILTER_MODEL=gemini-2.0-flash
+FILTER_MODEL=gemini-3-flash-preview
